# the-internet-tests

./: .gitignore  .lycheeignore  CONTRIBUTING.md  README.md  commitlint.config.cjs
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: java.yml  nightly.yml  pr.yml  python.yml  ts.yml
docker/: compose.grid.yml  compose.yml
docs/: README.md  anti-patterns.md  architecture.md  ci-workflows.md  flakiness-guide.md  framework-comparison.md  interview-guide.md  learning-paths.md  scenario-matrix.md
docs/adr/: 0000-template.md  0001-shared-scenario-catalog.md  0002-ui-http-scenario-split.md  0003-three-framework-tracks.md  0004-flaky-demo-not-ci-isolation.md  0005-independent-workflow-topology.md  README.md
docs/runbooks/: ci-failure-triage.md
docs/templates/: runbook-template.md  stack-readme-template.md  waiver-template.md
java-framework/: pom.xml
scenarios/: catalog.yml
stacks/java-selenium-testng/: .gitignore  README.md  mvnvm.properties  pom.xml  run
stacks/python-playwright/: .gitignore  README.md  pyproject.toml
stacks/python-playwright/src/the_internet_tests/: __init__.py  config.py
stacks/python-playwright/tests/: conftest.py  test_add_remove.py  test_broken_images.py  test_checkboxes.py  test_dropdown.py  test_dynamic_controls.py  test_dynamic_loading.py  test_file_upload.py  test_http_resources.py  test_iframe.py  test_inputs.py  test_javascript_alerts.py  test_login.py  test_redirect.py  test_sortable_tables.py  test_status_codes.py  test_windows.py
tools/: check-fast-start.py  check-scenarios.py
(+102 files in other folders)
